--- a/frontend/src/Components/myProfile/profileStyles.css
+++ b/frontend/src/Components/myProfile/profileStyles.css
@@ -40,7 +40,7 @@
 
   
   .user-leaderboard-card {
-    background-color: #ffffff;
+    background-color: #ccc8c84f;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -57,7 +57,7 @@
 
   .user-details-card{
 
-    background-color: #ffffff;
+    background-color: #ccc8c84f;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -74,13 +74,18 @@
     display: flex;
     gap: 20px;
     margin-top: 20px;
+    width: 80%;
   }
   
   .bottom-card {
     flex: 1;
-    background-color: #ffffff;
+    display: flex; /* Add this property to use flexbox for centering */
+    flex-direction: column; /* Set the direction to column to center vertically */
+    justify-content: center; /* Vertically center the content */
+    background-color: #ccc8c84f;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   }
+  
   
